# gemini-api-docs-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  verify_db.py  verify_gemini.py  verify_server.py
gemini_docs_mcp/: config.py  ingest.py  server.py
tests/: eval_harness.py  result.json  test_prompts.json
