[project]
name = "gemini-docs-mcp"
version = "0.1.0"
description = "MCP server for searching Google Gemini API documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx",
    "beautifulsoup4",
    "sqlite-utils",
]

[project.scripts]
gemini-docs-mcp = "gemini_docs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
